RESOLVED FIXED226374
Go to network in case fetch event is not yet responded when being destroyed instead of failing the load
https://bugs.webkit.org/show_bug.cgi?id=226374
Summary Go to network in case fetch event is not yet responded when being destroyed i...
youenn fablet
Reported 2021-05-28 06:09:46 PDT
Attachments
Patch (12.35 KB, patch)
2021-05-28 06:19 PDT, youenn fablet
no flags
Patch for landing (12.40 KB, patch)
2021-05-31 00:19 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2021-05-28 06:19:28 PDT
Alex Christensen
Comment 2 2021-05-28 09:15:46 PDT
Comment on attachment 430007 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430007&action=review > Source/WebCore/testing/ServiceWorkerInternals.cpp:63 > + if (!result.has_value()) { It looks like this whole change could just be a value_or({ })
Darin Adler
Comment 3 2021-05-29 22:43:48 PDT
Comment on attachment 430007 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=430007&action=review > Source/WebCore/testing/ServiceWorkerInternals.cpp:67 > + auto& error = result.error(); > + String description; > + if (error) > + description = error->localizedDescription(); Nice way to write this: String description; if (auto& error = result.error()) description = error->localizedDescription();
youenn fablet
Comment 4 2021-05-31 00:19:34 PDT
Created attachment 430182 [details] Patch for landing
youenn fablet
Comment 5 2021-05-31 01:20:57 PDT
(In reply to Darin Adler from comment #3) > Comment on attachment 430007 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=430007&action=review > > > Source/WebCore/testing/ServiceWorkerInternals.cpp:67 > > + auto& error = result.error(); > > + String description; > > + if (error) > > + description = error->localizedDescription(); > > Nice way to write this: > > String description; > if (auto& error = result.error()) > description = error->localizedDescription(); Done
EWS
Comment 6 2021-05-31 01:29:09 PDT
Committed r278274 (238311@main): <https://commits.webkit.org/238311@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430182 [details].
Note You need to log in before you can comment on or make changes to this bug.